--- a/package.json
+++ b/package.json
@@ -12,31 +12,32 @@
     "testonly:watch": "jest --watch"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-jest": "^19.0.0",
-    "eslint": "^3.18.0",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-config-yoctol": "^0.12.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prettier": "^2.0.1",
-    "eslint-plugin-react": "^6.10.3",
-    "jasmine-reporters": "^2.2.1",
-    "jest": "^19.0.2",
-    "prettier": "^1.5.2"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-yoctol": "^0.23.3",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "jasmine-reporters": "^2.3.2",
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2"
   },
+  "license": "MIT",
   "dependencies": {
-    "babel-preset-yoctol": "^0.4.1",
-    "cross-env": "^4.0.0",
-    "dataloader": "^1.3.0",
-    "dotenv": "^4.0.0",
-    "graphql": "^0.10.5",
-    "graphql-tools": "^1.2.0",
-    "knex": "^0.13.0",
-    "koa": "^2.3.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-graphql": "^0.7.1",
+    "babel-preset-yoctol": "^0.7.0",
+    "cross-env": "^6.0.3",
+    "dataloader": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6",
+    "knex": "^0.19.5",
+    "koa": "^2.10.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-graphql": "^0.8.0",
     "koa-router": "^7.4.0",
     "mysql": "^2.17.1"
   },
